docker: add libsoup

--- a/.docker/Dockerfile.ubuntu16.10.py2
+++ b/.docker/Dockerfile.ubuntu16.10.py2
@@ -4,6 +4,7 @@ ENV LANG C.UTF-8
 
 RUN apt-get update && apt-get install --no-install-recommends -y \
     gir1.2-gtk-3.0 \
+    gir1.2-soup-2.4 \
     python-flake8 \
     python-gi \
     python-gi-cairo \
