--- a/.docker/Dockerfile.ubuntu16.10.py2
+++ b/.docker/Dockerfile.ubuntu16.10.py2
@@ -6,6 +6,7 @@ RUN apt-get update && apt-get install -y \
     gir1.2-gtk-3.0 \
     gir1.2-soup-2.4 \
     glib-networking \
+    gvfs-backends \
     python-flake8 \
     python-gi \
     python-gi-cairo \
